--- a/Central.ipynb
+++ b/Central.ipynb
@@ -41,6 +41,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 445,
+   "id": "7b4b75bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'axes.facecolor': 'white', 'axes.edgecolor': 'black', 'axes.grid': False, 'axes.axisbelow': 'line', 'axes.labelcolor': 'black', 'figure.facecolor': (1, 1, 1, 0), 'grid.color': '#b0b0b0', 'grid.linestyle': '-', 'text.color': 'black', 'xtick.color': 'black', 'ytick.color': 'black', 'xtick.direction': 'out', 'ytick.direction': 'out', 'lines.solid_capstyle': <CapStyle.projecting: 'projecting'>, 'patch.edgecolor': 'black', 'patch.force_edgecolor': False, 'image.cmap': 'viridis', 'font.family': ['sans-serif'], 'font.sans-serif': ['DejaVu Sans', 'Bitstream Vera Sans', 'Computer Modern Sans Serif', 'Lucida Grande', 'Verdana', 'Geneva', 'Lucid', 'Arial', 'Helvetica', 'Avant Garde', 'sans-serif'], 'xtick.bottom': True, 'xtick.top': False, 'ytick.left': True, 'ytick.right': False, 'axes.spines.left': True, 'axes.spines.bottom': True, 'axes.spines.right': True, 'axes.spines.top': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sns.axes_style())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 370,
    "id": "de93eb39",
    "metadata": {},
@@ -949,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 382,
-   "id": "7d8afb63",
+   "id": "e500ffe5",
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 383,
-   "id": "1a4e2931",
+   "id": "17d8363b",
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 384,
-   "id": "ce309601",
+   "id": "20e59157",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": 385,
-   "id": "df5d264e",
+   "id": "e271fc9f",
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1105,7 @@
   {
    "cell_type": "code",
    "execution_count": 386,
-   "id": "7f69f313",
+   "id": "d2c6294a",
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 387,
-   "id": "2f4f628a",
+   "id": "44132f77",
    "metadata": {},
    "outputs": [
     {
@@ -1260,15 +1278,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abbc32ba",
+   "id": "64f9df12",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
-   "id": "7d68f6eb",
+   "execution_count": 447,
+   "id": "5c54054b",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1295,7 @@
        "<AxesSubplot:xlabel='PoliticalPartyName', ylabel='count'>"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 447,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1300,7 +1318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97dfb540",
+   "id": "d5bb73a3",
    "metadata": {},
    "source": [
     "# Female-Candidate"
@@ -1309,7 +1327,7 @@
   {
    "cell_type": "code",
    "execution_count": 389,
-   "id": "9dc1bb10",
+   "id": "0a077241",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": 390,
-   "id": "a733d544",
+   "id": "7b1109fe",
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1484,7 @@
   {
    "cell_type": "code",
    "execution_count": 391,
-   "id": "12943514",
+   "id": "f9552813",
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": 392,
-   "id": "0fedaeab",
+   "id": "9ae450db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1508,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": 393,
-   "id": "69da131c",
+   "id": "191a7156",
    "metadata": {},
    "outputs": [
     {
@@ -1586,7 +1604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "726bd2e6",
+   "id": "cc78ea6e",
    "metadata": {},
    "source": [
     "Observation: Only one female has won for central election"
@@ -1594,7 +1612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc40ca33",
+   "id": "36ba5649",
    "metadata": {},
    "source": [
     "# Extracting  Numerical Column"
@@ -1603,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 394,
-   "id": "5134db20",
+   "id": "0cb980e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,7 +1631,7 @@
   {
    "cell_type": "code",
    "execution_count": 395,
-   "id": "3b43985d",
+   "id": "ad2cc1ff",
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1652,7 @@
   {
    "cell_type": "code",
    "execution_count": 396,
-   "id": "6207ec7d",
+   "id": "e1260fa2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1644,7 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": 397,
-   "id": "26091330",
+   "id": "519d5fdd",
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": 398,
-   "id": "3ef1d907",
+   "id": "77c5d8e8",
    "metadata": {},
    "outputs": [
     {
@@ -1706,7 +1724,7 @@
   {
    "cell_type": "code",
    "execution_count": 399,
-   "id": "d06355a1",
+   "id": "f4728e0f",
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1761,7 @@
   {
    "cell_type": "code",
    "execution_count": 400,
-   "id": "85d5c095",
+   "id": "d9792dfb",
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1785,7 @@
   {
    "cell_type": "code",
    "execution_count": 401,
-   "id": "dd4a7cc0",
+   "id": "9d63f9c9",
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1824,7 @@
   {
    "cell_type": "code",
    "execution_count": 402,
-   "id": "59b43679",
+   "id": "5eceeef5",
    "metadata": {},
    "outputs": [
     {
@@ -1834,7 +1852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e81e1990",
+   "id": "63179f91",
    "metadata": {},
    "source": [
     "# Our outliear lies"
@@ -1843,7 +1861,7 @@
   {
    "cell_type": "code",
    "execution_count": 403,
-   "id": "495dfc78",
+   "id": "b72a474d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1853,7 +1871,7 @@
   {
    "cell_type": "code",
    "execution_count": 404,
-   "id": "efe140a4",
+   "id": "2b893846",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1869,7 +1887,7 @@
   {
    "cell_type": "code",
    "execution_count": 405,
-   "id": "94584038",
+   "id": "dfd79c7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1879,7 +1897,7 @@
   {
    "cell_type": "code",
    "execution_count": 406,
-   "id": "38da8c8c",
+   "id": "0601de22",
    "metadata": {},
    "outputs": [
     {
@@ -1900,7 +1918,7 @@
   {
    "cell_type": "code",
    "execution_count": 407,
-   "id": "890f71ba",
+   "id": "d550e8fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1910,7 +1928,7 @@
   {
    "cell_type": "code",
    "execution_count": 408,
-   "id": "c1a0b5e3",
+   "id": "f6a51414",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1920,7 +1938,7 @@
   {
    "cell_type": "code",
    "execution_count": 409,
-   "id": "11b15e30",
+   "id": "19f0463d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1930,7 +1948,7 @@
   {
    "cell_type": "code",
    "execution_count": 410,
-   "id": "657fa8b1",
+   "id": "7544580a",
    "metadata": {},
    "outputs": [
     {
@@ -1959,7 +1977,7 @@
   {
    "cell_type": "code",
    "execution_count": 411,
-   "id": "c2f5e162",
+   "id": "ecd75a66",
    "metadata": {},
    "outputs": [
     {
@@ -1992,7 +2010,7 @@
   {
    "cell_type": "code",
    "execution_count": 412,
-   "id": "f5e5e4e4",
+   "id": "0bb0ad24",
    "metadata": {},
    "outputs": [
     {
@@ -2080,7 +2098,7 @@
   {
    "cell_type": "code",
    "execution_count": 413,
-   "id": "a8f6dbf5",
+   "id": "b14e2757",
    "metadata": {},
    "outputs": [
     {
@@ -2113,7 +2131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "679c9c8e",
+   "id": "4c981cc5",
    "metadata": {},
    "source": [
     "Observation: बहिर is wrong value"
@@ -2122,7 +2140,7 @@
   {
    "cell_type": "code",
    "execution_count": 414,
-   "id": "80eac5ef",
+   "id": "1bdb7b0e",
    "metadata": {},
    "outputs": [
     {
@@ -2143,7 +2161,7 @@
   {
    "cell_type": "code",
    "execution_count": 415,
-   "id": "e88ee75b",
+   "id": "b6f2b02a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2153,7 +2171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a077f607",
+   "id": "c2dd6ef3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2161,7 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": 416,
-   "id": "e7276c47",
+   "id": "99e131ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2171,7 +2189,7 @@
   {
    "cell_type": "code",
    "execution_count": 417,
-   "id": "34251227",
+   "id": "5418a377",
    "metadata": {
     "scrolled": true
    },
@@ -2207,7 +2225,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "8a14d066",
+   "id": "f1009782",
    "metadata": {},
    "outputs": [
     {
@@ -2228,7 +2246,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "3dee49e4",
+   "id": "cb541264",
    "metadata": {},
    "outputs": [
     {
@@ -2265,7 +2283,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "18ad6969",
+   "id": "789991f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2275,7 +2293,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "355c0709",
+   "id": "7901ab02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2284,7 +2302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c34b6ecc",
+   "id": "08d2bef8",
    "metadata": {},
    "source": [
     "Since, Gandaki State is oviously state 4, so we can drop it as well"
@@ -2293,7 +2311,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "cfba84f2",
+   "id": "610a340c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2303,7 +2321,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "c55c5796",
+   "id": "ebe35c5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2313,7 +2331,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "e1a1f96c",
+   "id": "6fe74ef1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2323,7 +2341,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "8d1b5d49",
+   "id": "1e35a7e2",
    "metadata": {},
    "outputs": [
     {
@@ -2344,7 +2362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7938a09",
+   "id": "1a885977",
    "metadata": {},
    "source": [
     "# Hence,all missing values are not ELected one."
@@ -2353,7 +2371,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "481d45fa",
+   "id": "940d6bdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2363,7 +2381,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "548ad483",
+   "id": "36281003",
    "metadata": {},
    "outputs": [
     {
@@ -2498,7 +2516,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "da9aacd1",
+   "id": "162ed63f",
    "metadata": {},
    "outputs": [
     {
@@ -2528,7 +2546,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "b347d356",
+   "id": "f87890e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2538,7 +2556,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "e6df81a1",
+   "id": "7ba71aac",
    "metadata": {},
    "outputs": [
     {
@@ -2559,7 +2577,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "f173a82d",
+   "id": "aab93f63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2570,7 +2588,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "ec96512a",
+   "id": "a08e48fd",
    "metadata": {},
    "outputs": [
     {
@@ -2599,7 +2617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d271f1b9",
+   "id": "e037e6e6",
    "metadata": {},
    "source": [
     "Since the available nan is not in np.NaN from, we can do it by replacing"
@@ -2608,7 +2626,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "c77fdb82",
+   "id": "99569605",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2618,7 +2636,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "62bc6b7f",
+   "id": "9196f542",
    "metadata": {},
    "outputs": [
     {
@@ -2639,7 +2657,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "c4f16a2c",
+   "id": "8d52ced2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2650,7 +2668,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "d22fc9df",
+   "id": "ff9cd2bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2660,7 +2678,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "f496eaff",
+   "id": "57163ee4",
    "metadata": {},
    "outputs": [
     {
@@ -2681,7 +2699,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "be1dc883",
+   "id": "9b9bdbd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2692,7 +2710,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "83e3bb7c",
+   "id": "741f35e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2703,7 +2721,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "b984a7c6",
+   "id": "dea65ae1",
    "metadata": {},
    "outputs": [
     {
@@ -2733,7 +2751,7 @@
   {
    "cell_type": "code",
    "execution_count": 423,
-   "id": "52485e3e",
+   "id": "ffeab9a0",
    "metadata": {},
    "outputs": [
     {
@@ -2754,7 +2772,7 @@
   {
    "cell_type": "code",
    "execution_count": 424,
-   "id": "45b24c10",
+   "id": "e609c06f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2767,7 +2785,7 @@
   {
    "cell_type": "code",
    "execution_count": 425,
-   "id": "41a84dd2",
+   "id": "e24a001b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2778,7 +2796,7 @@
   {
    "cell_type": "code",
    "execution_count": 426,
-   "id": "29d85b9e",
+   "id": "bd796db4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2790,7 +2808,7 @@
   {
    "cell_type": "code",
    "execution_count": 427,
-   "id": "786734bf",
+   "id": "a5fbffa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2801,7 +2819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f24a41f",
+   "id": "e3a5d5f2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2809,7 +2827,7 @@
   {
    "cell_type": "code",
    "execution_count": 438,
-   "id": "929af429",
+   "id": "1ed56d67",
    "metadata": {},
    "outputs": [
     {
@@ -2839,7 +2857,7 @@
   {
    "cell_type": "code",
    "execution_count": 431,
-   "id": "37d381e4",
+   "id": "c47f0f3d",
    "metadata": {},
    "outputs": [
     {
@@ -2860,7 +2878,7 @@
   {
    "cell_type": "code",
    "execution_count": 432,
-   "id": "c7f5f0ec",
+   "id": "0346564a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2870,7 +2888,7 @@
   {
    "cell_type": "code",
    "execution_count": 433,
-   "id": "12ce1b53",
+   "id": "9fa4807a",
    "metadata": {},
    "outputs": [
     {
@@ -2921,7 +2939,7 @@
   {
    "cell_type": "code",
    "execution_count": 434,
-   "id": "fafa04a3",
+   "id": "b28658c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2931,7 +2949,7 @@
   {
    "cell_type": "code",
    "execution_count": 442,
-   "id": "c521cf89",
+   "id": "13541f4e",
    "metadata": {},
    "outputs": [
     {
@@ -2961,7 +2979,7 @@
   {
    "cell_type": "code",
    "execution_count": 441,
-   "id": "102581f8",
+   "id": "ba087935",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2971,7 +2989,7 @@
   {
    "cell_type": "code",
    "execution_count": 436,
-   "id": "ded7f20c",
+   "id": "aebbae63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2981,7 +2999,7 @@
   {
    "cell_type": "code",
    "execution_count": 443,
-   "id": "029f686e",
+   "id": "d3585b64",
    "metadata": {},
    "outputs": [
     {
@@ -3011,7 +3029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4448224e",
+   "id": "af8b3b68",
    "metadata": {},
    "outputs": [],
    "source": []
